@startuml
class ApplicationManager {
    + Start() : void
    + Export() : void
    + Save() : void
    + Load() : void
    + ChangeInstrument(sequenceIndex:int) : void
    + MinNoteDuration() : void
    + PlusNoteDuration() : void
    + Play() : void
    + Stop() : void
    + Loop() : void
    + CloseApplication() : void
}
class ApplicationData {
    + ApplicationData()
    + ApplicationData(sequenceA:SequenceData, sequenceB:SequenceData, sequenceC:SequenceData, sequenceD:SequenceData)
}
class "List`1"<T> {
}
MonoBehaviour <|-- ApplicationManager
ApplicationManager --> "instrumentSprites" InstrumentSprites
ApplicationManager --> "sequenceBar" GameObject
ApplicationData --> "sequences<SequenceData>" "List`1"
@enduml
